@@ -1,8 +1,6 @@
 TODO
 
 v0.1
-- correct curb placement
-- correct side widths
 - correct height
 - initial release
 v0.2
