@@ -1,4 +1,6 @@
 v0.1
 - correct length (2092 m)
 - correct barrier placement
+- correct curb placement
+- correct side widths
 
